[tool.poetry]
name = "streamlit-cloud"
version = "0.1.0"
description = ""
authors = ["shibatanaoto <naoto.shibata510@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
streamlit = "^1.43.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
